; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_svc.c_bfa_fcxp_qresume.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_svc.c_bfa_fcxp_qresume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_fcxp_s = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.bfa_s* }
%struct.bfa_s = type { i32 }
%struct.bfi_fcxp_send_req_s = type { i32 }

@BFA_FALSE = common dso_local global i32 0, align 4
@BFA_REQQ_FCXP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @bfa_fcxp_qresume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_fcxp_qresume(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.bfa_fcxp_s*, align 8
  %4 = alloca %struct.bfa_s*, align 8
  %5 = alloca %struct.bfi_fcxp_send_req_s*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.bfa_fcxp_s*
  store %struct.bfa_fcxp_s* %7, %struct.bfa_fcxp_s** %3, align 8
  %8 = load %struct.bfa_fcxp_s*, %struct.bfa_fcxp_s** %3, align 8
  %9 = getelementptr inbounds %struct.bfa_fcxp_s, %struct.bfa_fcxp_s* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.bfa_s*, %struct.bfa_s** %11, align 8
  store %struct.bfa_s* %12, %struct.bfa_s** %4, align 8
  %13 = load i32, i32* @BFA_FALSE, align 4
  %14 = load %struct.bfa_fcxp_s*, %struct.bfa_fcxp_s** %3, align 8
  %15 = getelementptr inbounds %struct.bfa_fcxp_s, %struct.bfa_fcxp_s* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 8
  %16 = load %struct.bfa_s*, %struct.bfa_s** %4, align 8
  %17 = load i32, i32* @BFA_REQQ_FCXP, align 4
  %18 = call %struct.bfi_fcxp_send_req_s* @bfa_reqq_next(%struct.bfa_s* %16, i32 %17)
  store %struct.bfi_fcxp_send_req_s* %18, %struct.bfi_fcxp_send_req_s** %5, align 8
  %19 = load %struct.bfa_fcxp_s*, %struct.bfa_fcxp_s** %3, align 8
  %20 = load %struct.bfi_fcxp_send_req_s*, %struct.bfi_fcxp_send_req_s** %5, align 8
  %21 = call i32 @bfa_fcxp_queue(%struct.bfa_fcxp_s* %19, %struct.bfi_fcxp_send_req_s* %20)
  ret void
}

declare dso_local %struct.bfi_fcxp_send_req_s* @bfa_reqq_next(%struct.bfa_s*, i32) #1

declare dso_local i32 @bfa_fcxp_queue(%struct.bfa_fcxp_s*, %struct.bfi_fcxp_send_req_s*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
